--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -10,13 +10,20 @@ body {
 
 header h1 {
   font-family: "Poppins", sans-serif;
-  font-size: 110px;
-  color: #292929;
+  font-size: 90px;
+  color: #b4afaf;
   text-align: center;
-  margin: -2.5rem 0;
-  text-shadow: 0px 10px 15px black;
+  margin: 2rem 0;
+  letter-spacing: 2px;
+  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.8), 0 8px 15px rgba(0, 0, 0, 0.6),
+    0 0 10px rgba(0, 255, 135, 0.05); /* toque sutil de brilho verde */
+  transition: transform 0.3s ease;
+  margin-top: -20px;
 }
 
+header h1:hover {
+  transform: scale(1.01);
+}
 main {
   display: flex;
   flex-direction: column;
@@ -39,7 +46,7 @@ main {
   transition: border 0.3s ease;
   margin: -2rem;
   font-family: "Inter", sans-serif;
-  margin-left: -40px;
+  margin-left: -50px;
   backdrop-filter: blur(6px);
   background-color: rgba(0, 0, 0, 0.3);
 }
@@ -113,7 +120,7 @@ main {
   background: linear-gradient(145deg, #1e1e1e, #2a2a2a);
   color: #f5f5f5;
   font-family: "Inter", "Segoe UI", sans-serif;
-
+  text-align: center;
   padding: 0rem 1rem;
   margin: 0.75rem 0;
   border-radius: 16px;
@@ -122,10 +129,14 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 275px;
 
   text-align: center;
 }
 
 #ul li:hover {
   cursor: pointer;
+}
+.caixa-tarefa {
+  margin: auto; /* Centraliza horizontalmente */
 }
